# vibe-python-engineering-handbook

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml
.github/: ci.yml
.github/python-engineering-handbook/: .pre-commit-config.yaml
.github/workflows/: docs.yml
aiogram/: index.html
api-design/: index.html
architecture/: index.html
async/: index.html
caching/: index.html
deployment/: index.html
django/: index.html
docs/: aiogram.md  api-design.md  architecture.md  async.md  caching.md  deployment.md  django.md  fastapi.md  git.md  http-clients.md  index.md  monitoring.md  security.md  style-guide.md  testing.md  tooling.md
fastapi/: index.html
git/: index.html
http-clients/: index.html
monitoring/: index.html
search/: search_index.json
security/: index.html
style-guide/: index.html
testing/: index.html
tooling/: index.html
